--- a/artiesten.html
+++ b/artiesten.html
@@ -12,10 +12,13 @@
 	<h1>KommerKlank</h1>
 	<div class="gridcontainer">
 		<header>
-			<h3>HEADER</h3>
+			<a href="index.html">
+				<figure><img <img src="img/KommerKlank_Logo.png" alt="KommerKlank Logo"></figure>
+			</a>
 		</header>
+		
 		<nav>
-			<h3>NAV</h3>
+			<h3>NAVIGATIE</h3>
 			<ul>
 				<li><a href="index.html">KommerKlank</a></li>
 				<li><a href="artiesten.html">Artiesten</a></li>
@@ -31,7 +34,7 @@
 				<section>
 					<h4>Adam Engelen</h4>
 					<article>
-						<p>TEXT OVER ADAM</p>
+						<p>Adam Engelen is al een echte oldtimer in het vakgebied. Zijn carrière loopt al over meer den 25 jaar. Doorheen zijn carrière had hij al enkele grote hits als charmezanger. Hij mocht meermaals optreden op grote schlagerfestivals in België en Nederland. De laatste jaren heeft Adam Engelen zich meer toegespitst op smartlap. Door zijn levenservaring kan hij de realiteit op een artistieke wijze bezingen. Zijn liederen ontroeren je op een magische manier. Zijn diepe stem zal je raken tot diep in je hart. Adam is dus zeker een meerwaarde bij het label 'KommerKlank'. Hij bracht ondertussen al 4 albums uit en is zeker nog niet van plan om te stoppen.</p>
 					</article>
 					<figure><img <img src="img/Covers/AE_Hart.jpg" alt="Adam Engelen - Het Gebroken Hart"></figure>
 					<figure><img <img src="img/Covers/AE_Knoop.jpg" alt="Adam Engelen - In De Knoop"></figure>
@@ -41,7 +44,7 @@
 				<section>
 					<h4>Augustina De Smet</h4>
 					<article>
-						<p>TEXT OVER AUGUSTINA DE SMET</p>
+						<p>Augustina was oorspronkelijk lid van het bekende duo “de verloren kroost”. Zij en haar man hadden een enorm succes eind de jaren 90. Wanneer haar man overleed aan een langdurige ziekte besliste ze om het succes alleen verder te zetten. Haar liederen gaan vooral over de dood en de liefde, een samenspel dat zij mooi kan omzetten in woorden. Haar muziek maakt je helemaal stil en doet je bezinnen. Het schrijven van de liederen is voor haar een goede hulp bij het verwerkingsproces na de dood van haar man. Augustina heeft 4 albums uitgebracht onder 'KommerKlank' maar denkt nog niet aan stoppen. Ze wil in de toekomst terug samenwerken met één of meerdere artiesten om zo terug het succes te beleven van vroeger.</p>
 					</article>
 					<figure><img <img src="img/Covers/ADS_Laatste.png" alt="Augustina De Smet - Een Laatste Lied Voor Jouw"></figure>
 					<figure><img <img src="img/Covers/ADS_Naald.png" alt="Augustina De Smet - Door Het Oog Van De Naald"></figure>
@@ -51,7 +54,7 @@
 				<section>
 					<h4>Linda Hombroeckx</h4>
 					<article>
-						<p>TEXT OVER LINDA HOMBROECKX</p>
+						<p>Linda heeft een echte passie voor muziek. Ze werkt als leerkracht muzikale opvoeding op een middelbare school. In haar vrije tijd was ze vroeger achtergrondzangeres bij een bekende charmezanger. Acht jaar geleden besloot ze zelf aan een carrière als zangeres te beginnen. Ze was verliefd op de Nederlandstalige liederen maar ze wilde vernieuwend zijn. Ze besliste om zich te focussen op smartlap. Haar inspiratie haalt ze van verschillende Engelstalige liederen die ze vertaalt naar het Nederlands. Aan elk lied geeft ze haar eigen draai, en op deze manier creëert ze iets uniek. Ze heeft ondertussen al 4 albums uitgebracht onder het label 'KommerKlank' en ze heeft nog veel meer in zich.</p>
 					</article>
 					<figure><img <img src="img/Covers/LH_Steenhard.jpg" alt="Linda Hombroeckx - Steenhard"></figure>
 					<figure><img <img src="img/Covers/LH_Alleen.jpg" alt="Linda Hombroeckx - Alleen Is Maar Alleen"></figure>
@@ -61,7 +64,7 @@
 				<section>
 					<h4>Marcello</h4>
 					<article>
-						<p>TEXT OVER MARCELLO</p>
+						<p>Marcello, ook wel gekend als de zingende postbode van Duffel, maakte vijf jaar geleden zijn debuut in de wereld van de smartlap. Toen zijn carrière als postbode erop zat kon hij zich focussen op dingen die hij echt graag deed. Doorheen zijn carrière kweekte hij een passie voor Nederlandstalige liederen. Tijdens het werk zong hij heel de tijd op de fiets. Mensen gaven hem complimenten en wezen hem erop dat hij talent in zich had. Dit heeft marcello aan het schrijven gezet. Hij schreef zijn eigen nummers die hij dan op plaatselijke optredens aan de man bracht. Na enkele jaren werd Marcello opgemerkt door het label 'KommerKlank'. Onder dit label heeft hij ondertussen 4 albums uitgebracht. De albums bezingen het menselijk leed op zo’n manier dat er toch schoonheid in zit. Hij brengt de hedendaagse problematiek over op een zeer rustige en aangename manier. Momenteel is Marcello bezig aan zijn vijfde album. Wanneer dit klaar zal zijn is nog niet geweten.</p>
 					</article>
 					<figure><img <img src="img/Covers/M_Briljant.jpg" alt="Marcello - Briljant"></figure>
 					<figure><img <img src="img/Covers/M_Kamerplant.jpg" alt="Marcello - Stille  Kamerplant"></figure>
@@ -72,20 +75,23 @@
 		</main>
 
 		<aside>
-			<h3>KommerKlank LIVE</h3>
-			<section>
-				<p>Koop <a href="http://www.lotto-arena.be/nl">hier</a> je tickets</p>
-			</section>
-			<section>
-				<p>Plan je route op voorhand</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.401108999073!2d4.439363950782884!3d51.23010733866125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f7a2e7e4a369%3A0x1e6d3f41ff39bf39!2sLotto+Arena!5e0!3m2!1snl!2sbe!4v1496757933673" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-			</section>
-			<section>
-				<p>Win een <a href="#">meet & greet</a> met onze artiesten!</p>
-			</section>
-			<section>
-				<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
-			</section>
+			<div class="Brush">
+				<h3>KommerKlank LIVE</h3>
+				<section>
+					<p>Koop <a href="http://www.lotto-arena.be/nl">hier</a> je tickets</p>
+				</section>
+				<section>
+					<p>Plan je route op voorhand</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.401108999073!2d4.439363950782884!3d51.23010733866125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f7a2e7e4a369%3A0x1e6d3f41ff39bf39!2sLotto+Arena!5e0!3m2!1snl!2sbe!4v1496757933673"
+					  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</section>
+				<section>
+					<p>Win een <a href="#">meet & greet</a> met onze artiesten!</p>
+				</section>
+				<section>
+					<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
+				</section>
+			</div>
 		</aside>
 
 		<footer>
