--- a/evenementen.html
+++ b/evenementen.html
@@ -12,10 +12,13 @@
 	<h1>KommerKlank</h1>
 	<div class="gridcontainer">
 		<header>
-			<h3>HEADER</h3>
+			<a href="index.html">
+				<figure><img <img src="img/KommerKlank_Logo.png" alt="KommerKlank Logo"></figure>
+			</a>
 		</header>
+
 		<nav>
-			<h3>NAV</h3>
+			<h3>NAVIGATIE</h3>
 			<ul>
 				<li><a href="index.html">KommerKlank</a></li>
 				<li><a href="artiesten.html">Artiesten</a></li>
@@ -29,33 +32,38 @@
 			<div class="evenementen">
 				<h3>EVENEMENTEN</h3>
 				<section>
-					<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1883601441884291%2Fvideos%2F1922028078041627%2F&show_text=0&width=560" width="100%" height="100%" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+					<iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2F1883601441884291%2Fvideos%2F1922028078041627%2F&show_text=0&width=560" width="100%" height="350px" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+					  allowTransparency="true" allowFullScreen="true"></iframe>
 				</section>
 				<section>
 					<h4>KommerKlank LIVE</h4>
 					<article>
-						<p>INFO OVER DE LABELDAG</p>
+						<h5>Zondag 25 juni 2017</h5>
+						<p>In de Lotto Arena</p>
 					</article>
-					<figure><img <img src="img/Image.jpg" alt="Preview Image"></figure>
+					<figure><img <img src="img/Affiche.jpg" alt="Affiche KommerKlank Live"></figure>
 				</section>
 			</div>
 		</main>
 
 		<aside>
-			<h3>KommerKlank LIVE</h3>
-			<section>
-				<p>Koop <a href="http://www.lotto-arena.be/nl">hier</a> je tickets</p>
-			</section>
-			<section>
-				<p>Plan je route op voorhand</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.401108999073!2d4.439363950782884!3d51.23010733866125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f7a2e7e4a369%3A0x1e6d3f41ff39bf39!2sLotto+Arena!5e0!3m2!1snl!2sbe!4v1496757933673" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
-			</section>
-			<section>
-				<p>Win een <a href="#">meet & greet</a> met onze artiesten!</p>
-			</section>
-			<section>
-				<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
-			</section>
+			<div class="Brush">
+				<h3>KommerKlank LIVE</h3>
+				<section>
+					<p>Koop <a href="http://www.lotto-arena.be/nl">hier</a> je tickets</p>
+				</section>
+				<section>
+					<p>Plan je route op voorhand</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.401108999073!2d4.439363950782884!3d51.23010733866125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f7a2e7e4a369%3A0x1e6d3f41ff39bf39!2sLotto+Arena!5e0!3m2!1snl!2sbe!4v1496757933673"
+					  width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</section>
+				<section>
+					<p>Win een <a href="#">meet & greet</a> met onze artiesten!</p>
+				</section>
+				<section>
+					<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
+				</section>
+			</div>
 		</aside>
 
 		<footer>
