--- a/artiesten.html
+++ b/artiesten.html
@@ -16,7 +16,7 @@
 				<figure><img <img src="img/KommerKlank_Logo.png" alt="KommerKlank Logo"></figure>
 			</a>
 		</header>
-		
+
 		<nav>
 			<h3>NAVIGATIE</h3>
 			<ul>
@@ -91,11 +91,15 @@
 				<section>
 					<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
 				</section>
+				<section>
+					<p><a href="https://www.facebook.com/KommerKlank-1883601441884291/">FACEBOOK</a></p>
+				</section>
 			</div>
 		</aside>
 
 		<footer>
-			<h3>FOOTER</h3>
+			<h3>KommerKlank</h3>
+			<p>Kommerklank&copy; 2017</p>
 		</footer>
 	</div>
 	<script src="javascript.js"></script>
