--- a/over.html
+++ b/over.html
@@ -65,11 +65,15 @@
 				<section>
 					<p><a href="http://www.lotto-arena.be/nl/jetons/faq">FAQ</a></p>
 				</section>
+				<section>
+					<p><a href="https://www.facebook.com/KommerKlank-1883601441884291/">FACEBOOK</a></p>
+				</section>
 			</div>
 		</aside>
 
 		<footer>
-			<h3>FOOTER</h3>
+			<h3>KommerKlank</h3>
+			<p>Kommerklank&copy; 2017</p>
 		</footer>
 	</div>
 	<script src="javascript.js"></script>
