--- a/webshop.html
+++ b/webshop.html
@@ -29,6 +29,9 @@
 		</nav>
 
 		<main>
+			<div class="kar">
+				<a href="#"><figure><img <img src="img/Kar.png" alt="Kutkar"></figure></a>
+			</div>
 			<div class="webshop">
 				<h3>WEBSHOP</h3>
 				<a href="webshop.html">
